炫彩编程助手/Data/DemoMgr/net/Lib/XCGUI.cs


		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawEllipse", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawEllipse (int hDraw,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FillRoundRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_FillRoundRect (int hDraw,RECT* pRect,int nWidth,int nHeight);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawRoundRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawRoundRect (int hDraw,RECT* pRect,int nWidth,int nHeight);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FillRoundRectEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_FillRoundRectEx (int hDraw,RECT* pRect,int nLeftTop,int nRightTop,int nRightBottom,int nLeftBottom);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawRoundRectEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawRoundRectEx (int hDraw,RECT* pRect,int nLeftTop,int nRightTop,int nRightBottom,int nLeftBottom);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_Rectangle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_Rectangle (int hDraw,int nLeftRect,int nTopRect,int nRightRect,int nBottomRect);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawGroupBox_Rect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawGroupBox_Rect (int hDraw,RECT* pRect,string pName,int textColor,byte textAlpha,POINT* pOffset);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawGroupBox_RoundRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawGroupBox_RoundRect (int hDraw,RECT* pRect,string pName,int textColor,byte textAlpha,POINT* pOffset,int nWidth,int nHeight);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_GradientFill2", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_GradientFill2 (int hDraw,int color1,byte alpha1,int color2,byte alpha2,RECT* pRect,int mode);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_GradientFill4", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_GradientFill4 (int hDraw,int color1,int color2,int color3,int color4,RECT* pRect,int mode);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FrameRgn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_FrameRgn (int hDraw,int hrgn,int hbr,int nWidth,int nHeight);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FrameRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_FrameRect (int hDraw,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FocusRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_FocusRect (int hDraw,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawLine", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawLine (int hDraw,int x1,int y1,int x2,int y2);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_MoveToEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_MoveToEx (int hDraw,int X,int Y,POINT* lpPoint);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_LineTo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_LineTo (int hDraw,int nXEnd,int nYEnd);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_Polyline", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_Polyline (int hDraw,POINT* pArrayPt,int arrayPtSize);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_Dottedline", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_Dottedline (int hDraw,int x1,int y1,int x2,int y2);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetPixel", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_SetPixel (int hDraw,int X,int Y,int crColor);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_Check", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_Check (int hDraw,int x,int y,int color,bool bCheck);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawIconEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_DrawIconEx (int hDraw,int xLeft,int yTop,int hIcon,int cxWidth,int cyWidth,int istepIfAniCur,int hbrFlickerFreeDraw,int diFlags);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_BitBlt", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_BitBlt (int hDrawDest,int nXDest,int nYDest,int nWidth,int nHeight,int hdcSrc,int nXSrc,int nYSrc,int dwRop);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_BitBlt2", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_BitBlt2 (int hDrawDest,int nXDest,int nYDest,int nWidth,int nHeight,int hDrawSrc,int nXSrc,int nYSrc,int dwRop);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_AlphaBlend", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_AlphaBlend (int hDraw,int nXOriginDest,int nYOriginDest,int nWidthDest,int nHeightDest,int hdcSrc,int nXOriginSrc,int nYOriginSrc,int nWidthSrc,int nHeightSrc,int alpha);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_TriangularArrow", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_TriangularArrow (int hDraw,int align,int x,int y,int width,int height);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawPolygon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawPolygon (int hDraw,POINT* points,int nCount);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawPolygonF", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawPolygonF (int hDraw,POINTF * points,int nCount);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FillPolygon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_FillPolygon (int hDraw,POINT* points,int nCount);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FillPolygonF", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_FillPolygonF (int hDraw,POINTF * points,int nCount);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_Image", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_Image (int hDraw,int hImageFrame,int x,int y);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_Image2", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_Image2 (int hDraw,int hImageFrame,int x,int y,int width,int height);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_ImageStretch", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_ImageStretch (int hDraw,int hImageFrame,int x,int y,int width,int height);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_ImageAdaptive", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_ImageAdaptive (int hDraw,int hImageFrame,RECT* pRect,bool bOnlyBorder);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_ImageExTile", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_ImageExTile (int hDraw,int hImageFrame,RECT* pRect,int flag);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_ImageSuper", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_ImageSuper (int hDraw,int hImageFrame,RECT* pRect,bool bClip);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_ImageSuper2", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_ImageSuper2 (int hDraw,int hImageFrame,RECT* pRcDest,RECT* pSrcRect);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawText (int hDraw,string lpString,int nCount,RECT lpRect);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_DrawTextUnderline", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_DrawTextUnderline (int hDraw,string lpString,int nCount,RECT lpRect,int colorLine,byte alphaLine);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_TextOut", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_TextOut (int hDraw,int nXStart,int nYStart,string lpString,int cbString);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_TextOutEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_TextOutEx (int hDraw,int nXStart,int nYStart,string lpString);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_TextOutA", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_TextOutA (int hDraw,int nXStart,int nYStart,string lpString);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetAlpha", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_SetAlpha (int hDraw,byte alpha);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetAlphaEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_SetAlphaEx (int hdc,byte alpha);

		[DllImport("xcgui.dll", EntryPoint = "XEle_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XEle_Create (int x,int y,int cx,int cy,int hParent);

		[DllImport("xcgui.dll", EntryPoint = "_XEle_RegEvent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool _XEle_RegEvent (int hEle,int nEvent,int pEvent);

		[DllImport("xcgui.dll", EntryPoint = "_XEle_RemoveEvent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool _XEle_RemoveEvent (int hEle,int nEvent,int pEvent);

		[DllImport("xcgui.dll", EntryPoint = "XEle_RegEventC", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_RegEventC (int hEle,int nEvent,int pFun);

		[DllImport("xcgui.dll", EntryPoint = "XEle_RegEventC1", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_RegEventC1 (int hEle,int nEvent,int pFun);
